@@ -1,3 +1,9 @@
+2009-05-21  Pedro Alves  <pedro@codesourcery.com>
+
+	* dec-thread.c (dec_thread_wait): Add options parameter.  Use it
+	to call the to_wait method in the target beneath.
+	* remote-m32r-sdi.c (m32r_wait): Add options parameter.
+
 2009-05-21  Joel Brobecker  <brobecker@adacore.com>
 
 	* aix-thread.c (aix_thread_wait): Add options parameter.  Use it
